# ChaOS

./: .gitignore  Cargo.toml  DEVELOPMENT_LOG.md  Makefile  README.md  boot.asm  chaos-config.toml  linker.ld
.cargo/: config.toml
arch-iface/: Cargo.toml
arch-iface/src/: lib.rs
arch/x86_64/: Cargo.toml
arch/x86_64/src/: lib.rs
boot/: grub.cfg
boot/x86_64/bios/: boot.asm  stage1.asm  stage2.asm
boot/x86_64/bios/lib/: a20.inc  disk.inc  mmap.inc  print.inc  print_macros.inc
kernel/: Cargo.toml
kernel/src/: allocator.rs  boot.s  kernel_layout.rs  main.rs  mem.rs  multiboot2.rs  sync.rs
src/: stage2.asm
src/boot/: stage1.asm  stage2.asm
src/boot/lib/: a20.asm  disk.asm  protected_mode.asm
src/kernel/: Cargo.toml  entry.asm  i686-none.json  kernel.ld
src/kernel/.cargo/: config.toml
src/kernel/src/: lib.rs
src/lib/: disk.asm  gdt.asm  print.asm
xtask/: Cargo.toml
xtask/src/: cli.rs  config.rs  main.rs  memory.rs  tools.rs
xtask/src/pipelines/: bios.rs  mod.rs
